--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,26 +8,24 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-    
+          os: [ubuntu-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-    
     - name: Run unit tests
       run: |
-        python -c "import pytest; print('pytest is available')"
-        python -m pytest --version
-        find . -name "*.py" -type f | head -5
+        python -m pytest tests/ -v
+      
