--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,24 +8,33 @@ jobs:
   test:
     strategy:
       matrix:
-          os: [ubuntu-latest, windows-latest]
-
+        os: [ubuntu-latest, windows-latest]
+    
     runs-on: ${{ matrix.os }}
-
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
+      
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+    
+    - name: Debug - Show test files
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Test files found:"
+        find . -name "*.py" -path "*/tests/*" | head -10
+        echo "Directory structure:"
+        ls -la tests/
+    
     - name: Run unit tests
       run: |
         python -m pytest tests/ -v
-      
