--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+      fail-fast: false
     
     runs-on: ${{ matrix.os }}
     
@@ -26,15 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
     
-    - name: Debug - Show test files
-      run: |
-        echo "Current directory:"
-        pwd
-        echo "Test files found:"
-        find . -name "*.py" -path "*/tests/*" | head -10
-        echo "Directory structure:"
-        ls -la tests/
-    
     - name: Run unit tests
       run: |
+        python -m pytest --collect-only tests/
         python -m pytest tests/ -v
