--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-      fail-fast: false
     
     runs-on: ${{ matrix.os }}
     
@@ -25,9 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
     
-    - name: Run unit tests
+    - name: Run unit tests with unittest
       run: |
-        python -m pytest --collect-only tests/
-        python -m pytest tests/ -v
+        python -m unittest discover tests/ -v
