--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+      fail-fast: false
     
     runs-on: ${{ matrix.os }}
     
@@ -21,10 +22,19 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Install dependencies
+    - name: Debug project structure
+      run: |
+        echo "Project structure:"
+        find . -name "*.py" | head -20
+        echo "Current directory:"
+        pwd
+        ls -la
+    
+    - name: Install project
       run: |
         python -m pip install --upgrade pip
+        pip install -e .
     
-    - name: Run unit tests with unittest
+    - name: Run unit tests
       run: |
         python -m unittest discover tests/ -v
