--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-      fail-fast: false
     
     runs-on: ${{ matrix.os }}
     
@@ -22,19 +21,15 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Debug project structure
+    - name: Debug import issue
       run: |
-        echo "Project structure:"
-        find . -name "*.py" | head -20
-        echo "Current directory:"
-        pwd
-        ls -la
+        echo "=== Project Structure ==="
+        find . -name "*.py" | sort
+        echo "=== Trying to import circle ==="
+        python -c "import sys; print('Python path:', sys.path); from circle import area; print('Import successful!')" || echo "Import failed"
+        echo "=== Testing circle functions ==="
+        python -c "from circle import area, perimeter; print('Area of radius 5:', area(5)); print('Perimeter of radius 5:', perimeter(5))"
     
-    - name: Install project
+    - name: Run specific test file
       run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-    
-    - name: Run unit tests
-      run: |
-        python -m unittest discover tests/ -v
+        PYTHONPATH=. python -m unittest tests.test_circle -v
