--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,39 +21,10 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Create working circle module and tests
+    - name: Run circle tests
       run: |
-        # Создаем простой circle.py который точно работает
-        cat > circle.py << 'EOF'
-        import math
-
-        def area(r):
-            if r < 0:
-                raise ValueError("Radius cannot be negative")
-            return math.pi * r * r
-
-        def perimeter(r):
-            if r < 0:
-                raise ValueError("Radius cannot be negative")
-            return 2 * math.pi * r
-        EOF
-        
-        # Создаем простые тесты
-        cat > test_simple.py << 'EOF'
-        import unittest
-        import math
-        from circle import area, perimeter
-
-        class TestCircle(unittest.TestCase):
-            def test_area_positive(self):
-                self.assertAlmostEqual(area(5), math.pi * 25)
-            
-            def test_perimeter_positive(self):
-                self.assertAlmostEqual(perimeter(10), 2 * math.pi * 10)
-            
-            def test_area_zero(self):
-                self.assertEqual(area(0), 0)
-        EOF
-        
-        # Запускаем тесты
-        python -m unittest test_simple.py -v
+        python -m unittest tests.test_circle -v
+    
+    - name: Run all tests
+      run: |
+        python -m unittest discover tests/ -v
