--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,14 @@ jobs:
       with:
         python-version: '3.9'
     
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+    
     - name: Run unit tests
       run: |
-        python -m unittest discover tests/ -v
+        python -c "import pytest; print('pytest is available')"
+        python -m pytest --version
+        find . -name "*.py" -type f | head -5
+        python -m pytest tests/ -v
