--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        # Если есть requirements.txt
+        # pip install -r requirements.txt
     
     - name: Run unit tests
       run: |
-        python -m pytest  
+        python -m unittest discover -v
