--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,37 @@
-name: Run Unit Tests
+name: Unit Tests
 
 on:
   push:
-    branches: [ "**" ]
+    branches: [ "**" ] 
+#запуск workflow, загрузка кода в удаленный репозиторий
 
 jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest] 
+#для нескольких задач в нескольких конфигурациях создает комбинации параметров и запускает их на Linux и Windows
     
     runs-on: ${{ matrix.os }}
+    #подставляется значение из матрицы
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      #копирования репозитория и переключение на коммит
       
-    - name: Set up Python
+    - name: Dowland Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
+      #скачивание Python
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Если есть requirements.txt
-        # pip install -r requirements.txt
+      #обновление и установление пакетного менеджера
     
     - name: Run unit tests
       run: |
         python -m unittest discover -v
+      #запуск тестирования на виртуальных машинах
